fix: remove text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   height: auto;
   @media screen and (max-width: 950px) {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 }
 p {
@@ -33,7 +33,7 @@ a {
 }
 .flex {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 .items-center {
   align-items: center;
@@ -49,7 +49,6 @@ a {
 }
 
 .heading {
-  /* width: 1330px; */
   height: max-content;
   padding: 0;
   margin: 0;
@@ -147,6 +146,10 @@ a {
   font-weight: bold;
   font-family: Fb Spoiler;
   text-align: right;
+  @media screen and(max-width:500px) {
+    height: max-content;
+    background-color: rebeccapurple;
+  }
 }
 .text-footer-2 a {
   text-decoration: none;
@@ -165,8 +168,7 @@ a {
   padding: 0rem 0.5rem;
 
   @media screen and (max-width: 500px) {
-    height: 60px;
-    width: 100%;
+    border: none;
   }
 }
 
@@ -186,8 +188,8 @@ a {
   margin-top: -60px;
 }
 .logo-top {
-  transform: translate(-100%, 0);
-  height: 100px;
+  transform: translate(-300%, 10%);
+  height: 50px;
 }
 
 /* Hero */
@@ -205,9 +207,11 @@ a {
   position: relative;
   overflow: hidden;
   width: 444px;
-  height: 292px;
+  /* height: 292px; */
   @media screen and (max-width: 500px) {
-    width: auto;
+    /* width: auto; */
+    padding-top: 3rem;
+    margin-bottom: 0;
   }
 }
 .circle {
@@ -306,6 +310,9 @@ a {
   font-weight: bold;
   font-family: Fb Spoiler;
   text-align: right;
+  @media screen and (max-width: 500px) {
+    padding: 0.5rem;
+  }
 }
 .fb_logo {
   width: 20px;
